force-app/main/default/objects/Section_Table__c/Section_Table__c.object-meta.xml
<CustomObject>
    <label>Section Table</label>
    <nameField>
        <label>Section Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Section Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>