force-app/main/default/objects/Section_Table__c/fields/Column_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Column_Display_Order__c</fullName>
    <label>Column Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>