force-app/main/default/objects/Section_Table__c/fields/Column_width__c.field-meta.xml
<CustomField>
    <fullName>Column_width__c</fullName>
    <label>Column width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>