force-app/main/default/objects/Section_Table__c/fields/Header_Label__c.field-meta.xml
<CustomField>
    <fullName>Header_Label__c</fullName>
    <label>Header Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>