force-app/main/default/objects/Section_Table__c/fields/QuoteLineItem_Field__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItem_Field__c</fullName>
    <label>QuoteLineItem Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>