force-app/main/default/objects/Section_Table__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Section Tables</relationshipLabel>
    <relationshipName>Section_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>