force-app/main/default/objects/Section_Table__c/fields/Show_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Show_Subtotal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Subtotal</label>
    <type>Checkbox</type>
</CustomField>