force-app/main/default/objects/Section_Table__c/fields/Subtotal_Label__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Label__c</fullName>
    <label>Subtotal Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>