force-app/main/default/objects/Section_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Header_Label__c</columns>
    <columns>Type__c</columns>
    <columns>QuoteLineItem_Field__c</columns>
    <columns>Column_width__c</columns>
    <columns>Column_Display_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>